manifests/services/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
spec:
  type: ClusterIP
  selector: {}
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Endpoints
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
subsets:
  - addresses:
      - ip: 100.89.247.22
    ports:
      - name: http
        port: 3001
        protocol: TCP
